testcases/error/invalid_msb.veryl
module invalid_msb {
    let _a: logic = msb;
}
